<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context="com.example.daniel.convertapp.Udaljenost">
    <TextView
        android:id="@+id/tvdaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Konverter udaljenosti"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/etConvUdaljenost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:inputType="numberDecimal"
        android:hint="@string/DistHint"
        android:textAlignment="center"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFrom"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Udaljenost">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTo"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Udaljenost">
    </Spinner>
    <Button
        android:id="@+id/bConvUdaljenost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bConvert"
        android:layout_marginTop="15dp" />


</LinearLayout>
</ScrollView>
