<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.example.daniel.convertapp.Brzina">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Konverter brzine"
        android:id="@+id/tvResBrz"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/etConvBrzina"
        android:hint="@string/BrzHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:inputType="numberDecimal"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFrom"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinBrzina1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Brzina">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTo"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinBrzina2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Brzina">
    </Spinner>
    <Button
        android:id="@+id/bConvBrzina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bConvert"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/holo_blue_dark"/>


</LinearLayout>
    </ScrollView>