<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.convertapp.Masa">
    <EditText
        android:id="@+id/etConvMasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:inputType="numberDecimal"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFrom"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinMasa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Masa">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTo"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinMasa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Masa">
    </Spinner>
    <Button
        android:id="@+id/bConvMasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bConvert"
        android:layout_marginTop="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTo"
        android:id="@+id/tvResMas"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>