<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C2120"
    tools:context="com.example.daniel.convertapp.Temperatura">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Konverter temperature"
        android:id="@+id/tvResTemp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/etConvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:inputType="numberDecimal"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFrom"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinTemp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Temp">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTo"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinTemp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/Temp">
    </Spinner>
    <Button
        android:id="@+id/bConvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bConvert"
        android:layout_marginTop="15dp" />


</LinearLayout>
